# FlipperUI

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  session-report-20260421-1547.html  splash.html  todo.txt  vite.config.ts
.agents/skills/claude-md/: SKILL.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.sisyphus/plans/: flipperui-plan.md
src/: App.tsx  gifenc.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_app_icons.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_icon.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: app.rs  app_icon.rs  apps.rs  badusb.rs  cli.rs  client.rs  device.rs  diag.rs  gui.rs  infrared.rs  library_prewalk.rs  library_scan.rs  mod.rs  nfc.rs  path.rs  rfid.rs  storage.rs  subghz.rs  tray.rs  window.rs
src-tauri/src/flipper/: app.rs  apps.rs  badusb.rs  cli.rs  client.rs  diag.rs  fap_icon.rs  framing.rs  gui.rs  infrared.rs  library_prewalk.rs  library_walk.rs  mod.rs  nfc.rs  rfid.rs  session.rs  storage.rs  subghz.rs  transport.rs
src-tauri/src/flipper/ble/: connection.rs  mod.rs  runtime.rs  scanner.rs  transport.rs
src/components/AppLibrary/: AppLibrary.tsx  FapIcon.tsx  LibraryTable.tsx  LibraryToolbar.tsx
src/components/BadUsbLibrary/: BadUsbEditorModal.tsx  BadUsbLibrary.tsx  DuckyscriptEditor.tsx  FilePreviewModal.tsx  LibraryTable.tsx  LibraryToolbar.tsx  duckyscript.ts
src/components/CliPanel/: CliPanel.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/DevTools/: DiagPanel.tsx
src/components/DeviceInfo/: DeviceInfoView.tsx
src/components/DevicePanel/: BleDialog.tsx  DevicePanel.tsx
src/components/DeviceSettings/: DeviceSettingsCard.tsx  DeviceSettingsModal.tsx  schemas.ts
src/components/FileBrowser/: BreadcrumbBar.tsx  FileBrowser.tsx  FileList.tsx  Toolbar.tsx
src/components/FilePickerModal/: FilePickerModal.tsx
src/components/GlobalSearch/: GlobalSearch.tsx
src/components/Gpio/: GpioView.tsx
src/components/InfraredLibrary/: InfraredLibrary.tsx  LibraryTable.tsx  LibraryToolbar.tsx
src/components/LibraryPreScan/: LibraryPreScanModal.tsx
src/components/Nav/: SideRail.tsx
src/components/NfcLibrary/: LibraryTable.tsx  LibraryToolbar.tsx  NfcLibrary.tsx
src/components/RfidLibrary/: LibraryTable.tsx  LibraryToolbar.tsx  RfidLibrary.tsx
src/components/ScreenViewer/: ScreenViewer.tsx
src/components/Settings/: LibraryExclusionsEditor.tsx  SettingsPane.tsx  SettingsPanel.tsx
src/components/SubGhzLibrary/: LibraryTable.tsx  LibraryToolbar.tsx  SubGhzLibrary.tsx
src/components/ui/: ConfirmDialog.tsx  ContextMenu.tsx  ErrorBanner.tsx  ErrorBoundary.tsx  FlipperSvgIcon.tsx  LibraryDropOverlay.tsx  ProgressBar.tsx  ScanProgressBar.tsx  Spinner.tsx
src/hooks/: useExportDrag.ts  useLibraryDrop.ts  useLibraryPreScan.tsx  usePreloadLibraries.ts  useStorage.ts
src/lib/: appsCache.ts  badusbCache.ts  clockSync.ts  encoding.ts  format.ts  infraredCache.ts  nfcCache.ts  notify.ts  path.ts  rfidCache.ts  settings.ts  subghzCache.ts  tauri.ts  theme.ts  useDirectorySuggestions.ts
src/store/: useFlipperStore.ts
src/types/: apps.ts  badusb.ts  flipper.ts  infrared.ts  nfc.ts  rfid.ts  subghz.ts
