[package]
name = "flipperui"
version = "0.1.1"
description = "FlipperUI - A Tauri-based qFlipper replacement"
authors = ["marco"]
edition = "2021"

[lib]
name = "flipperui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"
protoc-bin-vendored = "3"

[dependencies]
tauri = { version = "2", features = ["wry"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
serialport = "4"
thiserror = "2"
base64 = "0.22"
tauri-plugin-drag = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
