[package]
name = "flipperui"
version = "0.4.1"
description = "FlipperUI - A Tauri-based Flipper Zero file-manager and Signal-Library"
authors = ["maz"]
edition = "2021"

[lib]
name = "flipperui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"
protoc-bin-vendored = "3"

[dependencies]
tauri = { version = "2", features = ["wry", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
serialport = "4"
thiserror = "2"
base64 = "0.22"
tauri-plugin-drag = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
object = { version = "0.36", default-features = false, features = ["read_core", "elf", "std"] }
btleplug = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
once_cell = "1"
futures = "0.3"
uuid = "1"

# macOS-only: AppKit FFI for setting the Dock icon at runtime.
# `objc2` is already in the dep tree transitively via Tauri/cocoa, so adding
# `objc2-app-kit` and `objc2-foundation` only adds typed-binding glue, no
# additional native compilation.
# Windows-only: Win32 API for setting the taskbar icon at runtime.
# Tauri's `set_icon` only updates the title-bar icon; the taskbar needs
# an explicit `WM_SETICON` with `ICON_BIG` via `SendMessageW`.
# Uses the same `windows` crate / version that Tauri already depends on
# so the HWND type from `window.hwnd()` matches our `SendMessageW` call.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSBundle"] }

# One-shot CLI used to generate dark-mode app-icon PNGs from the existing
# orange icons. Lives in `examples/` so it is *not* picked up by Tauri's
# bundler — Tauri scans `[[bin]]` targets to decide what to bundle, and a
# second binary there confuses it. Examples build only on demand.
#
# Run after editing the source PNGs or adding new variants:
#   cargo run --features icon-gen --example gen_app_icons
[[example]]
name = "gen_app_icons"
path = "examples/gen_app_icons.rs"
required-features = ["icon-gen"]

[features]
icon-gen = ["dep:image"]

[dependencies.image]
version = "0.25"
optional = true
default-features = false
features = ["png"]
